--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,6 +3,24 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <!-- Add Code Here -->
+        <div class="container">
+            <h1>My Personal Bio</h1>
+            <img src="jay.jpg"  style="max-width: 100%; border-radius: 50%;">
+            <p><strong>First Name:</strong> Jay-Ar</p>
+            <p><strong>Middle Name:</strong> Mangulabnan</p>
+            <p><strong>Last Name:</strong> Bote</p>
+            <p><strong>Country:</strong> Philippines</p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/jaru91">github.com/jaru91</a></p>
+            <h2>Hobbies</h2>
+            <ul>
+              <li>Reading</li>
+              <li>Gardening</li>
+              <li>Eating</li>
+            </ul>
+            <h2>Something About Myself</h2>
+            <p>Accomplished Civil Engineer with a proven track record in the construction sector. Proficient in utilizing Autocad, TEKLA Structures, STAAD-Pro, and various other Engineering software tools. Adept at tackling complex engineering challenges. Possesses programming skills in Python, C#, HTML, CSS, and JavaScript. Holds a Bachelor of Science degree with a concentration in Civil Engineering from the Polytechnic University of the Philippines.</p>
+            
+        
+        </div>
     </body>
 </html>
